force-app/main/default/objects/Asset_Intake_Inventor__c/Asset_Intake_Inventor__c.object-meta.xml
<CustomObject>
    <label>Asset Intake Inventor</label>
    <nameField>
        <displayFormat>AII-{00000}</displayFormat>
        <label>Asset Intake Inventor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Intake Inventors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>