force-app/main/default/objects/Asset_Intake_Inventor__c/fields/Inventor_Designer_Author__c.field-meta.xml
<CustomField>
    <fullName>Inventor_Designer_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(DEPRECATED) Inventor/Designer/Author</label>
    <referenceTo>SymphonyLF__Inventor_Designer_Author__c</referenceTo>
    <relationshipLabel>Asset Intake Inventors</relationshipLabel>
    <relationshipName>Asset_Intake_Inventors</relationshipName>
    <type>Lookup</type>
</CustomField>