force-app/main/default/objects/Asset_Intake_Inventor__c/fields/Inventor_Designer_Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventor_Designer_Author_Name__c</fullName>
    <label>Innovator Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>