force-app/main/default/objects/Asset_Intake_Inventor__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>SymphonyLF__Person__c</referenceTo>
    <relationshipLabel>Asset Intake Inventors</relationshipLabel>
    <relationshipName>Asset_Intake_Inventors</relationshipName>
    <type>Lookup</type>
</CustomField>