force-app/main/default/objects/Asset_Intake_Inventor__c/fields/Primary_Inventor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Inventor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Inventor</label>
    <type>Checkbox</type>
</CustomField>